Second Change in Photograph Location

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing = "20">
         <tr>
-            <td><img src = "images/Photograph-modified.png" alt = "Computer Photo"></td>
+            <td><img src = "Photograph-modified.png" alt = "Computer Photo"></td>
             <td>
                 <h1>Tarun Jaiswal</h1>
                 <p><em>Student at <strong><a href="https://www.rgipt.ac.in/">Rajiv Gandhi Institute of Petroleum Technology</a></strong></em></p>
